# data_task

./: .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd-pipeline.yml
deployment/: main.tf
emis_task/: main.py
sqlite_db/: processed_data.db
tests/: test_data_processor.py
